CREATE TABLE IF NOT EXISTS point_account (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id VARCHAR(64) NOT NULL,
    balance BIGINT NOT NULL DEFAULT 0,
    version BIGINT NOT NULL DEFAULT 0,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uk_point_account_user_id UNIQUE (user_id),
    CONSTRAINT ck_point_account_balance_non_negative CHECK (balance >= 0),
    CONSTRAINT ck_point_account_version_non_negative CHECK (version >= 0)
);

CREATE TABLE IF NOT EXISTS point_policy (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    policy_code VARCHAR(50) NOT NULL,
    policy_value VARCHAR(100) NOT NULL,
    value_type VARCHAR(20) NOT NULL,
    description VARCHAR(255),
    active BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uk_point_policy_code UNIQUE (policy_code),
    CONSTRAINT ck_point_policy_value_type CHECK (value_type IN ('NUMBER', 'DAYS', 'DATETIME', 'BOOLEAN', 'TEXT'))
);

CREATE TABLE IF NOT EXISTS point_transaction_request (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    account_id BIGINT NOT NULL,
    transaction_type VARCHAR(30) NOT NULL,
    transaction_no VARCHAR(100) NOT NULL,
    request_hash VARCHAR(128) NOT NULL,
    request_amount BIGINT,
    request_order_no VARCHAR(100),
    target_point_key VARCHAR(40),
    status VARCHAR(20) NOT NULL,
    result_point_key VARCHAR(40),
    error_code VARCHAR(50),
    response_snapshot CLOB,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_ptr_account FOREIGN KEY (account_id) REFERENCES point_account (id),
    CONSTRAINT uk_ptr_account_type_tx_no UNIQUE (account_id, transaction_type, transaction_no),
    CONSTRAINT ck_ptr_type CHECK (transaction_type IN ('GRANT', 'GRANT_CANCEL', 'USE', 'USE_CANCEL')),
    CONSTRAINT ck_ptr_status CHECK (status IN ('PROCESSING', 'SUCCEEDED', 'FAILED')),
    CONSTRAINT ck_ptr_amount_non_negative CHECK (request_amount IS NULL OR request_amount > 0)
);

CREATE TABLE IF NOT EXISTS point_use_cancel (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    point_key VARCHAR(40) NOT NULL,
    transaction_request_id BIGINT NOT NULL,
    use_id BIGINT NOT NULL,
    canceled_amount BIGINT NOT NULL,
    reason VARCHAR(255),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uk_point_use_cancel_key UNIQUE (point_key),
    CONSTRAINT uk_point_use_cancel_tx_request UNIQUE (transaction_request_id),
    CONSTRAINT ck_point_use_cancel_amount_positive CHECK (canceled_amount > 0)
);

CREATE TABLE IF NOT EXISTS point_grant (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    point_key VARCHAR(40) NOT NULL,
    transaction_request_id BIGINT NOT NULL,
    account_id BIGINT NOT NULL,
    grant_type VARCHAR(30) NOT NULL,
    source_ref VARCHAR(100),
    granted_amount BIGINT NOT NULL,
    remaining_amount BIGINT NOT NULL,
    expires_at TIMESTAMP NOT NULL,
    status VARCHAR(20) NOT NULL,
    original_use_cancel_id BIGINT,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_point_grant_account FOREIGN KEY (account_id) REFERENCES point_account (id),
    CONSTRAINT fk_point_grant_tx_request FOREIGN KEY (transaction_request_id) REFERENCES point_transaction_request (id),
    CONSTRAINT uk_point_grant_key UNIQUE (point_key),
    CONSTRAINT ck_point_grant_type CHECK (grant_type IN ('NORMAL', 'MANUAL', 'REGRANT_FROM_USE_CANCEL')),
    CONSTRAINT ck_point_grant_status CHECK (status IN ('ACTIVE', 'CANCELED', 'EXPIRED', 'DEPLETED')),
    CONSTRAINT ck_point_grant_amount_positive CHECK (granted_amount > 0),
    CONSTRAINT ck_point_grant_remaining_range CHECK (remaining_amount >= 0 AND remaining_amount <= granted_amount),
    CONSTRAINT ck_point_grant_expiry_window CHECK (expires_at >= DATEADD('DAY', 1, created_at) AND expires_at < DATEADD('YEAR', 5, created_at))
);

CREATE TABLE IF NOT EXISTS point_grant_cancel (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    point_key VARCHAR(40) NOT NULL,
    transaction_request_id BIGINT NOT NULL,
    grant_id BIGINT NOT NULL,
    canceled_amount BIGINT NOT NULL,
    reason VARCHAR(255),
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_point_grant_cancel_grant FOREIGN KEY (grant_id) REFERENCES point_grant (id),
    CONSTRAINT fk_point_grant_cancel_tx_request FOREIGN KEY (transaction_request_id) REFERENCES point_transaction_request (id),
    CONSTRAINT uk_point_grant_cancel_key UNIQUE (point_key),
    CONSTRAINT uk_point_grant_cancel_tx_request UNIQUE (transaction_request_id),
    CONSTRAINT uk_point_grant_cancel_grant UNIQUE (grant_id),
    CONSTRAINT ck_point_grant_cancel_amount_positive CHECK (canceled_amount > 0)
);

CREATE TABLE IF NOT EXISTS point_use (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    point_key VARCHAR(40) NOT NULL,
    transaction_request_id BIGINT NOT NULL,
    account_id BIGINT NOT NULL,
    order_no VARCHAR(100) NOT NULL,
    used_amount BIGINT NOT NULL,
    cancelable_amount BIGINT NOT NULL,
    status VARCHAR(20) NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_point_use_account FOREIGN KEY (account_id) REFERENCES point_account (id),
    CONSTRAINT fk_point_use_tx_request FOREIGN KEY (transaction_request_id) REFERENCES point_transaction_request (id),
    CONSTRAINT uk_point_use_key UNIQUE (point_key),
    CONSTRAINT uk_point_use_tx_request UNIQUE (transaction_request_id),
    CONSTRAINT ck_point_use_amount_positive CHECK (used_amount > 0),
    CONSTRAINT ck_point_use_cancelable_range CHECK (cancelable_amount >= 0 AND cancelable_amount <= used_amount),
    CONSTRAINT ck_point_use_status CHECK (status IN ('USED', 'PARTIALLY_CANCELED', 'CANCELED'))
);

CREATE TABLE IF NOT EXISTS point_use_allocation (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    use_id BIGINT NOT NULL,
    grant_id BIGINT NOT NULL,
    allocated_amount BIGINT NOT NULL,
    canceled_amount BIGINT NOT NULL DEFAULT 0,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_point_use_alloc_use FOREIGN KEY (use_id) REFERENCES point_use (id),
    CONSTRAINT fk_point_use_alloc_grant FOREIGN KEY (grant_id) REFERENCES point_grant (id),
    CONSTRAINT ck_point_use_alloc_amount_positive CHECK (allocated_amount > 0),
    CONSTRAINT ck_point_use_alloc_cancel_range CHECK (canceled_amount >= 0 AND canceled_amount <= allocated_amount)
);

CREATE TABLE IF NOT EXISTS point_use_cancel_allocation (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    use_cancel_id BIGINT NOT NULL,
    use_allocation_id BIGINT NOT NULL,
    canceled_amount BIGINT NOT NULL,
    restore_type VARCHAR(30) NOT NULL,
    restored_grant_id BIGINT,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_point_use_cancel_alloc_cancel FOREIGN KEY (use_cancel_id) REFERENCES point_use_cancel (id),
    CONSTRAINT fk_point_use_cancel_alloc_allocation FOREIGN KEY (use_allocation_id) REFERENCES point_use_allocation (id),
    CONSTRAINT ck_point_use_cancel_alloc_amount_positive CHECK (canceled_amount > 0),
    CONSTRAINT ck_point_use_cancel_alloc_restore_type CHECK (restore_type IN ('RETURN_TO_GRANT', 'REGRANT_NEW_POINT'))
);

ALTER TABLE point_use_cancel
    ADD CONSTRAINT fk_point_use_cancel_tx_request
        FOREIGN KEY (transaction_request_id) REFERENCES point_transaction_request (id);

ALTER TABLE point_use_cancel
    ADD CONSTRAINT fk_point_use_cancel_use
        FOREIGN KEY (use_id) REFERENCES point_use (id);

ALTER TABLE point_grant
    ADD CONSTRAINT fk_point_grant_original_use_cancel
        FOREIGN KEY (original_use_cancel_id) REFERENCES point_use_cancel (id);

ALTER TABLE point_use_cancel_allocation
    ADD CONSTRAINT fk_point_use_cancel_alloc_restored_grant
        FOREIGN KEY (restored_grant_id) REFERENCES point_grant (id);

CREATE INDEX IF NOT EXISTS idx_ptr_status_updated_at
    ON point_transaction_request (status, updated_at);

CREATE INDEX IF NOT EXISTS idx_point_grant_account_status_type_exp
    ON point_grant (account_id, status, grant_type, expires_at);

CREATE INDEX IF NOT EXISTS idx_point_grant_account_exp
    ON point_grant (account_id, expires_at);

CREATE INDEX IF NOT EXISTS idx_point_use_account_order_no
    ON point_use (account_id, order_no);

CREATE INDEX IF NOT EXISTS idx_point_use_alloc_use_id
    ON point_use_allocation (use_id);

CREATE INDEX IF NOT EXISTS idx_point_use_alloc_grant_id
    ON point_use_allocation (grant_id);

CREATE INDEX IF NOT EXISTS idx_point_use_cancel_use_id
    ON point_use_cancel (use_id);

MERGE INTO point_policy (policy_code, policy_value, value_type, description, active)
KEY (policy_code)
VALUES
    ('MAX_GRANT_PER_TX', '100000', 'NUMBER', '1회 최대 적립 가능 포인트', TRUE),
    ('MAX_BALANCE_PER_USER', '1000000', 'NUMBER', '개인 최대 보유 가능 포인트', TRUE),
    ('DEFAULT_EXPIRY_DAYS', '365', 'DAYS', '기본 만료일', TRUE),
    ('MIN_EXPIRY_DAYS', '1', 'DAYS', '최소 만료일', TRUE),
    ('MAX_EXPIRY_DAYS', '1824', 'DAYS', '최대 만료일(5년 미만)', TRUE);
